--- a/docs/reporting.qmd
+++ b/docs/reporting.qmd
@@ -30,12 +30,12 @@ source(here('R/funcs.R'))
 
 levs <- c('OTB', 'HB', 'MTB', 'LTB')
 
-load(file = here('data/moddat.RData'))
+load(file = here('data/moddatannmos.RData'))
 avedat <- anlz_avedat(epcdata) 
 avedat$ann <- avedat$ann %>% 
-    filter(yr >= min(moddat$ann$yr) & yr <= max(moddat$ann$yr))
+    filter(yr >= min(moddatannmos$ann$yr) & yr <= max(moddatannmos$ann$yr))
 avedat$mos <- avedat$mos %>% 
-    filter(yr >= min(moddat$ann$yr) & yr <= max(moddat$ann$yr))
+    filter(yr >= min(moddatannmos$ann$yr) & yr <= max(moddatannmos$ann$yr))
 ```
 
 ::: {.panel-tabset}
@@ -49,7 +49,7 @@ avedat$mos <- avedat$mos %>%
 ```{r}
 #| fig-height: 5
 #| fig-width: 8
-moddatann <- moddat %>%
+moddatann <- moddatannmos %>%
   .$ann %>% 
   rename(valmod = val)
 
@@ -106,7 +106,7 @@ p1 + p2 + plot_layout(ncol = 1) & theme(strip.background = element_blank())
 ```{r}
 #| fig-height: 8
 #| fig-width: 8
-moddatann <- moddat %>%
+moddatann <- moddatannmos %>%
   .$ann %>% 
   rename(valmod = val)
 
@@ -166,7 +166,7 @@ p1 + p2 + plot_layout(ncol = 1, guides = 'collect') &
 ```{r}
 #| fig-height: 5
 #| fig-width: 8
-moddatmos <- moddat %>%
+moddatmos <- moddatannmos %>%
   .$mos %>% 
   rename(valmod = val)
 
@@ -220,7 +220,7 @@ p1 + p2 + plot_layout(ncol = 1) & theme(strip.background = element_blank())
 ```{r}
 #| fig-height: 8
 #| fig-width: 8
-moddatmos <- moddat %>%
+moddatmos <- moddatannmos %>%
   .$mos %>% 
   rename(valmod = val)
 
@@ -292,7 +292,7 @@ show_matrixtmp(avedat)
 ```{r}
 #| fig-height: 7
 #| fig-width: 4
-show_matrixtmp(moddat)
+show_matrixtmp(moddatannmos)
 ```
 
 ### Observed OTB
@@ -308,7 +308,7 @@ show_segplotlytmp(avedat, bay_segment = 'OTB')
 ```{r}
 #| out-height: 6in
 #| out-width: 7.5in
-show_segplotlytmp(moddat, bay_segment = 'OTB')
+show_segplotlytmp(moddatannmos, bay_segment = 'OTB')
 ```
 
 ### Observed HB
@@ -324,7 +324,7 @@ show_segplotlytmp(avedat, bay_segment = 'HB')
 ```{r}
 #| out-height: 6in
 #| out-width: 7.5in
-show_segplotlytmp(moddat, bay_segment = 'HB')
+show_segplotlytmp(moddatannmos, bay_segment = 'HB')
 ```
 
 ### Observed MTB
@@ -340,7 +340,7 @@ show_segplotlytmp(avedat, bay_segment = 'MTB')
 ```{r}
 #| out-height: 6in
 #| out-width: 7.5in
-show_segplotlytmp(moddat, bay_segment = 'MTB')
+show_segplotlytmp(moddatannmos, bay_segment = 'MTB')
 ```
 
 ### Observed LTB
@@ -356,7 +356,7 @@ show_segplotlytmp(avedat, bay_segment = 'LTB')
 ```{r}
 #| out-height: 6in
 #| out-width: 7.5in
-show_segplotlytmp(moddat, bay_segment = 'LTB')
+show_segplotlytmp(moddatannmos, bay_segment = 'LTB')
 ```
 
 :::
